# moodle-to-latex

./: .gitignore  Haskeleton.hs  LICENSE  LICENSE.md  Makefile  README.md  moodle.cabal  moodlelat.cabal  stack.yaml
Moodle/: Main.hs  Parser.hs  Translator.hs
Moodle/Moodle/: Translator.hs  Types.hs
Moodle/Test/: Moodle.hs
app/: Main.hs
benchmark/: Bench.hs  MoodleBench.hs
executable/: Main.hs
src/: Main.hs
src/Moodle/: Parser.hs  Translator.hs  Types.hs
test/: HLint.hs  MoodleSpec.hs
test-suite/: MoodleSpec.hs
tests/: MoodleTests.hs
