name: moodle
version: 0.1.0.0
cabal-version: >=1.10
homepage: https://github.com/rubik/moodle-to-latex
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 Michele Lacchia <michelelacchia@gmail.com>
maintainer: Michele Lacchia <michelelacchia@gmail.com>
synopsis: Translate Moodle expressions to Latex code
category: Text
author: Michele Lacchia <michelelacchia@gmail.com>
tested-with: GHC ==7.8 GHC ==7.6
extra-source-files:
    README.md

library
    exposed-modules:
        Moodle.Parser
        Moodle.Translator
        Moodle.Types
    build-depends: base       >=4.8  && <4.9
                 , scientific >=0.3  && <0.4
                 , text       >=1.2  && <1.3
                 , attoparsec >=0.13 && <0.14
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-prof-options: -auto-all -prof
    ghc-options: -Wall

executable moodle
    main-is: Main.hs
    build-depends:
        base -any,
        moodle -any
    other-extensions: OverloadedStrings
    build-depends: base       >=4.8  && <4.9
                 , scientific >=0.3  && <0.4
                 , text       >=1.2  && <1.3
                 , attoparsec >=0.13 && <0.14
    default-language: Haskell2010
    hs-source-dirs: executable library
    ghc-prof-options: -auto-all -prof
    ghc-options: -Wall

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base       >=4.8  && <4.9,
        scientific >=0.3  && <0.4,
        text       >=1.2  && <1.3,
        attoparsec >=0.13 && <0.14,
        moodle -any,
        hspec ==2.*,
        HUnit -any,
        QuickCheck -any
    default-language: Haskell2010
    hs-source-dirs: library test-suite
    other-modules:
        Moodle
        -- HASKELETON: New.Module
        MoodleSpec
        -- HASKELETON: New.ModuleSpec
    ghc-options: -fhpc -Wall
test-suite examples
    type: exitcode-stdio-1.0
    main-is: DocTest.hs
    build-depends:
        base -any,
        Glob ==0.7.*,
        doctest ==0.9.*
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall
test-suite coverage
    type: exitcode-stdio-1.0
    main-is: HPC.hs
    build-depends:
        base -any,
        directory ==1.*,
        process ==1.*,
        regex-compat >=0.90
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall
test-suite documentation
    type: exitcode-stdio-1.0
    main-is: Haddock.hs
    build-depends:
        base -any,
        process -any,
        regex-compat -any
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall
test-suite style
    type: exitcode-stdio-1.0
    main-is: HLint.hs
    build-depends:
        base -any,
        hlint ==1.*
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall

benchmark benchmarks
    if impl(ghc >=7.8)
        build-depends:
            criterion ==1.*

    if impl(ghc <7.8)
        build-depends:
            criterion ==0.6.*,
            hastache <0.6,
            statistics <0.11
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    build-depends:
        base       >=4.8  && <4.9,
        scientific >=0.3  && <0.4,
        text       >=1.2  && <1.3,
        attoparsec >=0.13 && <0.14,
        moodle -any,
        hspec ==2.*,
        HUnit -any,
        QuickCheck -any
    default-language: Haskell2010
    hs-source-dirs: benchmark
