name:                moodle
version:             0.1.0.0
synopsis:            Convert Moodle expressions to Latex code
description:         Please see README.md
homepage:            http://github.com/githubuser/moodle#readme
license:             MIT
license-file:        LICENSE
author:              Michele Lacchia
maintainer:          michelelacchia@gmail.com
copyright:           2015 Michele Lacchia
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Moodle
                       Moodle.Parser
                       Moodle.Translator
                       Moodle.Types
  default-language:    Haskell2010
  build-depends:       base       ==4.*
                     , scientific >=0.3  && <0.4
                     , text       >=1.2  && <1.3
                     , attoparsec >=0.12 && <0.14
  ghc-prof-options:    -auto-all -prof
  ghc-options:         -Wall

executable moodlelat
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  other-extensions: OverloadedStrings
  build-depends:       base   ==4.*
                     , moodle -any
                     , scientific >=0.3  && <0.4
                     , text       >=1.2  && <1.3
                     , attoparsec >=0.12 && <0.14
  default-language:    Haskell2010

test-suite moodle-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test src
  main-is:             Spec.hs
  build-depends:       base   ==4.*
                     , moodle -any
                     , scientific >=0.3  && <0.4
                     , text       >=1.2  && <1.3
                     , attoparsec >=0.12 && <0.14
                     , hspec ==2.*
                     , HUnit -any
                     , QuickCheck -any
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Moodle
                       MoodleSpec
test-suite style
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HLint.hs
  build-depends:       base  ==4.*
                     , hlint ==1.*
  default-language:    Haskell2010
  ghc-options:         -Wall

benchmark benchmarks
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is: Bench.hs
  build-depends:       base      ==4.*
                     , moodle    -any
                     , criterion ==1.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rubik/moodle-to-latex
